# fullscreenXlib

./: CMakeLists.txt  main.c
